# rag_chatbot_poc

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
backend/: Dockerfile  config.py  logger.py  main.py  requirements.txt
backend/auth/: config.py  constants.py  dependencies.py  exceptions.py  jwt.py  router.py  schemas.py  service.py  utils.py
backend/chat/: chat.py  router.py  schemas.py
backend/db/: __init__.py
backend/vector_db/: qdrant.py  router.py  schemas.py  service.py
frontend/: Dockerfile  app.py  requirements.txt
